--- a/gui/index.html
+++ b/gui/index.html
@@ -2,12 +2,15 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + TS</title>
+    <title>Astro</title>
+    <script type="module" src="/src/main.ts" defer></script>
   </head>
+
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
+    <div class="title">Astro</div>
+
+    <div class="link-code">0000</div>
+    <div class="code-timer"><div class="timer-inner"></div></div>
   </body>
 </html>
