--- a/panel/index.html
+++ b/panel/index.html
@@ -13,7 +13,7 @@
     <div class="auth">
       <div class="button" id="get-code">Get Code</div>
       <div class="code-input">
-        <input type="text" id="submit-code-input">
+        <input type="text" id="submit-code-input" autocomplete="off">
         <div class="button" id="submit-code">Submit</div>
       </div>
     </div>
@@ -29,7 +29,7 @@
           <i class="fa-solid fa-backward-step"></i>
         </div>
         <div class="player-info">
-          phazed.xyz
+          loading...
         </div>
         <div class="player-next" id="next-button">
           <i class="fa-solid fa-forward-step"></i>
