fix #7, fix #8 and fix #12

--- a/panel/index.html
+++ b/panel/index.html
@@ -58,7 +58,7 @@
           </div>
 
           <div class="creator-choose-app">
-            <p style="margin: 50px;">Applications have no yet been implemented, please check back later.</p>
+            <div class="app-list-container"></div>
 
             <div class="button" id="creator-choose-app-back">Back</div>
             <div class="button creator-cancel">Cancel</div>
