--- a/panel/index.html
+++ b/panel/index.html
@@ -96,9 +96,9 @@
             <input type="range" min="1" max="120" id="editor-time-input">
           </div><br /><br />
 
-          <div class="button-warning" id="slide-delete">Delete</div>
+          <div class="button-good" id="slide-url">Update</div>
           <div class="button" id="editor-button">Cancel</div>
-          <div class="button" id="slide-url">Update</div>
+          <div class="button-warning" id="slide-delete">Delete</div>
         </div>
 
         <div class="slide-scroller">
@@ -112,6 +112,7 @@
       </div>
     </div>
 
+    <div class="settings-backdrop"></div>
     <div class="settings">
       <span style="font-size: 20px;">Settings</span><br /><br />
 
