Add passcode system

--- a/panel/index.html
+++ b/panel/index.html
@@ -144,6 +144,10 @@
         </label>
       </div><br /><br />
 
+      Passcode: <br />
+      <input type="text" id="setting-passcode-input" placeholder="Enter New Passcode..." autocomplete="off">
+      <div class="button" id="setting-passcode">Submit</div><br /><br />
+
       <div class="button" id="settings-close">Close</div>
     </div>
 
